npm publish changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yellow-pages",
+  "name": "@thedev132/yellowpages",
   "version": "1.0.0",
   "description": "HCB Yellow Pages for JS/TS",
   "main": "dist/index.js",
